Uncertian of change

--- a/index.html
+++ b/index.html
@@ -89,15 +89,11 @@
      data-aos-duration="300">
           <h2 class="about-header mt-0">Get to Know Me</h2>
           <hr class="divider dark my-4">
-          <p class="about-text mb-2"> I was a zookeeper for nine years and due to an injury, I had to change career paths. 
-            I chose software engineering because like being a zookeeper you don’t ever stop learning something new. 
-            I returned to school to retrain myself since it had been a while since I had done even basic programming. 
-            But after finishing my degree didn’t feel like it gave me the complete skills I needed. 
-            So, I went to General Assembly to round out my technical skills in a three-month immersive software engineering course. 
-            I have coded almost every day since and have loved it.</p>
-            <p class="about-text mb-2">I can now create full-stack applications from scratch and know how to find the answers to the bugs that pop up. 
-            So, I will continue to build things. But I can also teach you how to milk a goat.   
-            </p>
+          <p class="about-text mb-2"> 
+            I'm Robert Johnston, a software developer with an unconventional background as a zookeeper for nine years. Due to an injury, I switched careers, drawn to software engineering's never-ending learning opportunities, much like zookeeping. I returned to school and completed my degree, but I felt the need to deepen my skills. So, I joined General Assembly for a three-month immersive software engineering course.</p>
+          <p class="about-text mb-2">
+            Over the past two years, I've been a consultant for Accenture, working with multinational corporations in transportation, e-commerce, business services, entertainment, and aerospace and defense. I've created multiple automations, earned AWS Solutions Architect and Developer Associate certifications, along with Azure Fundamentals and Terraform Associate certifications. My journey reflects my adaptability and commitment to constant growth in the dynamic world of software development. I'm eager to continue tackling challenges and contributing my skills to make a lasting impact.</p>
+            
         </div>
       </div>
     </div>
@@ -111,8 +107,12 @@
       <div class="row devicon-list">
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
-          <img src= "https://icongr.am/devicon/amazonwebservices-original.svg?size=128&color=currentColor" alt="Visual Studio" data-toggle="tooltip" data-placement="top" title="Amazon Web Services">
+          <img src= "https://icongr.am/devicon/amazonwebservices-original-wordmark.svg?size=100&color=currentColor" alt="AWS" data-toggle="tooltip" data-placement="top" title="Amazon Web Services">
         </div>
+      <div data-aos="flip-up" data-aos-easing="linear"
+        data-aos-duration="300">
+           <img src= "https://icongr.am/devicon/angularjs-original.svg?size=100&color=currentColor" alt="Angular" data-toggle="tooltip" data-placement="top" title="Angular">
+      </div>
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
           <img src="https://icongr.am/devicon/bootstrap-plain-wordmark.svg?size=100&color=563d7c" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap">
@@ -181,7 +181,14 @@
        data-aos-duration="300">
           <img src="https://icongr.am/devicon/sass-original.svg?size=100" alt="Sass" data-toggle="tooltip" data-placement="top" title="Sass">
         </div>
-        
+        <div data-aos="flip-up" data-aos-easing="linear"
+       data-aos-duration="300">
+          <img src="https://icongr.am/devicon/typescript-plain.svg?size=100&color=currentColor" alt="TypeScript" data-toggle="tooltip" data-placement="top" title="TypeScript">
+        </div>
+        <div data-aos="flip-up" data-aos-easing="linear"
+       data-aos-duration="300">
+          <img src="https://icongr.am/devicon/visualstudio-plain.svg?size=100&color=currentColor" alt="Visual Studio" data-toggle="tooltip" data-placement="top" title="Visual Studio Code">
+        </div>
       </div>
     </div>
   </section>
