Update resume link.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1UI6i5I1TUf3RRXrGoJApsdcDlyOgVtxe/view?usp=sharing" target="_blank">View Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/16RbKs_bDCRUgFAqps86D2MhAtXFxtctCAhDIGQIxpjw/edit?usp=sharing" target="_blank">View Resume</a>
           </li>
         </ul>
       </div>
