Update about section

--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@
           <h2 class="about-header mt-0">Get to Know Me</h2>
           <hr class="divider dark my-4">
           <p class="about-text mb-2"> 
-            I'm Robert Johnston, a software developer with an unconventional background as a zookeeper for nine years. Due to an injury, I switched careers, drawn to software engineering's never-ending learning opportunities, much like zookeeping. I returned to school and completed my degree, but I felt the need to deepen my skills. So, I joined General Assembly for a three-month immersive software engineering course.</p>
+            Greetings! I'm Robert Johnston, a software developer with a unique journey that began in the world of zookeeping, where I spent nine enriching years. A career transition due to an injury led me to the captivating realm of software engineering, which, much like zookeeping, offers perpetual learning opportunities. After completing my degree, I sought to enhance my expertise, embarking on a transformative three-month immersive software engineering course at General Assembly.
+          </p>
           <p class="about-text mb-2">
-            Over the past two years, I've been a consultant for Accenture, working with multinational corporations in transportation, e-commerce, business services, entertainment, and aerospace and defense. I've created multiple automations, earned AWS Solutions Architect and Developer Associate certifications, along with Azure Fundamentals and Terraform Associate certifications. My journey reflects my adaptability and commitment to constant growth in the dynamic world of software development. I'm eager to continue tackling challenges and contributing my skills to make a lasting impact.</p>
+            For the past two years, I've thrived as a consultant at Accenture, collaborating with global giants across various sectors such as transportation, e-commerce, business services, entertainment, and aerospace and defense. During this time, I've pioneered numerous automation solutions and achieved certifications including AWS Solutions Architect and Developer Associate, as well as Azure Fundamentals and Terraform Associate.
+          </p>
+          <p class="about-text mb-2">
+            My journey epitomizes adaptability and an unwavering commitment to continuous growth in the ever-evolving landscape of software development. I'm enthusiastic about confronting new challenges and leveraging my skills to drive meaningful change.
+          </p>
             
         </div>
       </div>
