Update resume link

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       <hr class="divider my-4">
       <div class="row justify-content-center">
         <div class="col-lg-2 text-center">
-          <a href="https://drive.google.com/file/d/1UI6i5I1TUf3RRXrGoJApsdcDlyOgVtxe/view?usp=sharing" target="_blank">
+          <a href="https://docs.google.com/document/d/16RbKs_bDCRUgFAqps86D2MhAtXFxtctCAhDIGQIxpjw/edit?usp=sharing" target="_blank">
             <i class="fas fa-4x fa-file-pdf mb-2"></i>
           </a>
           <p>View Resume</p>
