Remove deployed site links that no longer function

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                   The user can sign in and create seeds and note if they are favorites or planted in the garden.  
                   The user can also update the information about the seeds as that information changes.</p>
                 <ul class="list-inline">
-                  <li><a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Deployed Site</a>
-                  </li>
+                  <!-- <li><a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Deployed Site</a>
+                  </li> -->
                   <li><a href="https://github.com/robert-a-johnston/garden-gnome-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
                   <li><a href="https://github.com/robert-a-johnston/garden-gnome-API" target="_blank">API GitHub Repository</a>
@@ -348,8 +348,8 @@
                   The user can also edit and delete those posts that they created but not posts created by other users.  
                   This was the first React framework full-stack application built.</p>
                 <ul class="list-inline">
-                  <li><a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Deployed Site</a>
-                  </li>
+                  <!-- <li><a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Deployed Site</a>
+                  </li> -->
                   <li><a href="https://github.com/team-taco-project/taco-message-board-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
                   <li><a href="https://github.com/team-taco-project/taco-message-board-API" target="_blank">API GitHub Repository</a>
@@ -382,8 +382,8 @@
                   The user can update animal information and remove animals from the zoo if they would like.  
                   This was the first full-stack application built.</p>
                 <ul class="list-inline">
-                  <li><a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Deployed Site</a>
-                  </li>
+                  <!-- <li><a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Deployed Site</a>
+                  </li> -->
                   <li><a href="https://github.com/robert-a-johnston/zoo-builder-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
                   <li><a href="https://github.com/robert-a-johnston/zoo-builder" target="_blank">API GitHub Repository</a>
@@ -415,8 +415,8 @@
                   This was the first project created using Git and GitHub as version control methods that would be used in all of the other projects.  
                   This project demonstrated the agile workflow that would be expected in all future projects.</p>
                 <ul class="list-inline">
-                  <li><a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Deployed Site</a>
-                  </li>
+                  <!-- <li><a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Deployed Site</a>
+                  </li> -->
                   <li><a href="https://github.com/robert-a-johnston/Tic-Tac-Toe-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
                 </ul>
